src/objects/ADvendio__PlacementRecommendation__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__RecommendedPlacement__c</fullName>
        <label>Recommended Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipLabel>Placement Recommendations</relationshipLabel>
        <relationshipName>PlacementRecommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__TriggeringPlacement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipLabel>Triggered Placements</relationshipLabel>
        <relationshipName>TriggeredPlacements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <label>Valid until</label>
        <type>Date</type>
    </fields>
    <label>Placement Recommendation</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__RecommendedPlacement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Placement Recommendations Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>